--- a/courses2018-19.html
+++ b/courses2018-19.html
@@ -3,12 +3,12 @@ title: Courses for 2018-19
 ---
 
 {% assign semester = site.data.courses.aug2018 %}
-<h3 class="text-center">Courses for the semester August-December 2017</h3>
+<h3 class="text-center">Courses for the semester August-December 2018</h3>
 
 {% include semester-courses.html %}
 
 {% assign semester = site.data.courses.jan2019 %}
 <!-- <div class="col-md-8 col-offset-md-1"> -->
-<h3 class="text-center">Courses for the semester January-April 2018</h3>
+<h3 class="text-center">Courses for the semester January-April 2019/h3>
 
 {% include semester-courses.html %}{% include earlier-semesters.html %}
