--- a/course-schedule.html
+++ b/course-schedule.html
@@ -2,4 +2,4 @@
 title: Course Schedule
 ---
 <iframe width="100%" height="575" frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT_6VnhyI627icqnVlTk-yH6cHtbnUgf4eiRUnMPsjcDjr8B-TlkTOk_cloAa_GLwAi82CIYp1wKps5/pubhtml?gid=865777643&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-<p>For more details please see the <a href="https://indianinstituteofscience.sharepoint.com/sites/Academics/Pages/Departments.aspx">IISc intranet</a>.</p>
+<p>For more details please see the <a href="https://indianinstituteofscience.sharepoint.com/sites/MA">IISc Mathematics intranet</a>.</p>
