--- a/research-areas.html
+++ b/research-areas.html
@@ -22,7 +22,7 @@ title: Research Areas
 <p>
   <ul>
     <li><h4 id="calculus-of-variations-swarnendu-sil">Calculus of Variations (<a href="http://math.iisc.ac.in/~ssil/">Swarnendu Sil</a>)</h4>
-        <p> Existence and regularity/singularity of minimzers and/or critical points of possibly nonconvex, noncoercive functionals, weak continuity and weak lower semicontinuity, compensated compactness and concentration compactness, differential inclusions.</p> </li>
+        <p> Existence and regularity/singularity of minimizers and/or critical points of possibly nonconvex, noncoercive functionals, weak continuity and weak lower semicontinuity, compensated compactness and concentration compactness, differential inclusions.</p> </li>
     <li><h4 id="differential-equations-ak-nandakumaran-thirupati-gudi-swarnendu-sil">Differential Equations (<a href="http://math.iisc.ac.in/~gudi/">Thirupathi Gudi</a>, <a href="http://math.iisc.ac.in/~nands/">A.K. Nandakumaran</a>, <a href="http://math.iisc.ac.in/~ssil/">Swarnendu Sil</a>)</h4>
         <p> Homogenization of partial differential equations, controllability, viscosity solutions. Numerical methods for partial differential equations. Existence and regularity of nonlinear elliptic partial differential equations and systems.</p> </li>
     <li><h4 id="functional-analysis-and-operator-theory-gadadhar-misra-tirthankar-bhattacharya">Functional Analysis and Operator Theory (<a href="http://math.iisc.ac.in/~tirtha/">Tirthankar Bhattacharyya</a>, <a href="http://math.iisc.ac.in/~gm/">Gadadhar Misra</a>)</h4>
