--- a/collab.html
+++ b/collab.html
@@ -12,9 +12,16 @@ title: Research Landscape
         stroke-width: 1.5px;
     }
 
-    text {
+    .person text {
         font-family: sans-serif;
         font-size: 10px;
+        fill: navy;
+    }
+
+    .area text {
+        font-family: sans-serif;
+        font-size: 12px;
+        fill: maroon;
     }
 </style>
 Faculty members are linked to their collaborators and research areas.
@@ -30,7 +37,7 @@ Faculty members are linked to their collaborators and research areas.
 
     var simulation = d3.forceSimulation()
         .force("link", d3.forceLink().id(function (d) { return d.id; }))
-        .force("charge", d3.forceManyBody().strength(-50))
+        .force("charge", d3.forceManyBody().strength(-60))
         .force("center", d3.forceCenter(width / 2, height / 2)).
         force("vertical", d3.forceY(height / 2).strength(0.1)).
         force('collision', d3.forceCollide().radius(function (d) {
@@ -45,7 +52,7 @@ Faculty members are linked to their collaborators and research areas.
             .selectAll("line")
             .data(graph.links)
             .enter().append("line")
-            .attr("stroke-width", function (d) { return Math.sqrt(d.value); })
+            .attr("stroke-width", 1)
             .attr("stroke", function (d) { return d.colour });
 
         var node = svg.append("g")
@@ -63,7 +70,9 @@ Faculty members are linked to their collaborators and research areas.
                 .on("end", dragended));
 
         var labels = node.append("a")
-            .attr("xlink:href", function (d) { return d.url }).append("text")
+            .attr("xlink:href", function (d) { return d.url })
+            .attr("class", function(d){return d.url ? "person" : "area"})
+            .append("text")
             .text(function (d) {
                 return d.id;
             })
