--- a/course-schedule.html
+++ b/course-schedule.html
@@ -1,5 +1,5 @@
 ---
 title: Course Schedule
 ---
-<iframe width="100%" height="575" frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT_6VnhyI627icqnVlTk-yH6cHtbnUgf4eiRUnMPsjcDjr8B-TlkTOk_cloAa_GLwAi82CIYp1wKps5/pubhtml?gid=865777643&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-<p>For more details please see the <a href="https://indianinstituteofscience.sharepoint.com/sites/MA">IISc Mathematics intranet</a>.</p>
+<iframe width="100%" height="575" frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSgIbceietPvd5AQKN73CqpS1gYpc7mAMnk0simBjssvK_pOH45OqiBImMXxYBclE_3nA9AZogsLQDZ/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+<p>For more details please see the <a href="https://indianinstituteofscience.sharepoint.com/sites/MA" target="_blank">IISc Mathematics intranet</a>.</p>
